Bug fixes: profile photo was stretched at medium screen size; expertise areas hidden on mobile

--- a/wp-content/themes/fipradotcom/sass/modules/_modules.scss
+++ b/wp-content/themes/fipradotcom/sass/modules/_modules.scss
@@ -313,4 +313,4 @@ a {
 
   .v-align { @include vertical-align; }
 
-  .hide { display:none; }
+  //.hide { display:none; }
