--- a/wp-content/themes/fipradotcom/sass/pages/_profile.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_profile.scss
@@ -18,8 +18,8 @@
         h4 { color: lighten($color__fipra-blue-gray, 35%) !important; }
         img {
           display:none;
-          @include media($media__small) { display:block; position:absolute; bottom:0; left:40px; height:150px; top:50%; margin-top:-75px; }
-          @include media($media__medium) { margin-top:-100px; height:200px; }
+          @include media($media__small) { display:block; position:absolute; bottom:0; width:150px; left:40px; top:50%; margin-top:-75px; }
+          @include media($media__medium) { margin-top:-100px; width:200px; }
         }
       }
 
